# SillyCogUI

./: .gitignore  CMakeLists.txt  binding.gyp  package-lock.json  package.json
src/: server-startup.js
src/endpoints/: opencog.js
src/opencog/: README.md  diagnostics.js  opencog-manager.js  phase-manager.js
src/opencog/bindings/: addon.cpp
src/opencog/cpp/: opencog_client.cpp  opencog_client.hpp
tests/: opencog-integration.test.js
